# succinct-bit-vector

./: .gitignore  CMakeLists.txt  README.md
include/: bit_vector.h  naive_bit_vector.h
src/: CMakeLists.txt  bit_vector.cc  naive_bit_vector.cc
tests/: CMakeLists.txt  test_bit_vector.cc
